Fix all overflow element, separate the social media section with an hr

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 767px) {
   html {
     font-family: "Inter", sans-serif;
     font-size: 12px;
@@ -16,6 +16,7 @@
     align-items: center;
     justify-content: flex-start;
     margin: auto;
+    overflow-x: hidden;
   }
 
   html body header {
@@ -44,7 +45,7 @@
     justify-items: center;
     height: 626px;
     width: 375px;
-    padding: 64px 24px 0 24px;
+    padding-top: 64px;
     background-image: url("images/header-illsutration-mobile@2x.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -126,8 +127,8 @@
     grid-template-columns: auto;
     justify-content: center;
     height: 3100px;
-    width: 379px;
-    padding: 0 24px 64px 24px;
+    width: 375px;
+    padding-bottom: 64px;
     gap: 58px;
   }
 
@@ -259,12 +260,18 @@
     color: #fff;
   }
 
+  html body .bg_dsk {
+    width: 375px;
+    display: flex;
+    justify-content: center;
+  }
+
   html body .section_about_me {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 1625px;
-    width: 375px;
+    width: 325px;
     border-radius: 0;
     padding: 0 24px 64px 24px;
     gap: 58px;
@@ -275,7 +282,7 @@
     flex-direction: column;
     align-items: center;
     height: 435px;
-    width: 351px;
+    width: 325px;
     border-radius: 0;
     padding: 0;
     gap: 24px;
@@ -287,9 +294,9 @@
     align-items: center;
     background-image: url("images/illustration1.png");
     background-repeat: no-repeat;
-    background-size: 20%;
-    background-position: 319px;
-    width: 399px;
+    background-size: 15%;
+    background-position: 319px 2px;
+    width: 374px;
     height: 94px;
     margin-top: 12px;
   }
@@ -314,7 +321,7 @@
   }
 
   html body .section_about_me .article_about_me .bg_about_me2 {
-    width: 399px;
+    width: 374px;
     height: 300px;
     display: flex;
     justify-content: center;
@@ -322,7 +329,7 @@
     background-image: url("images/illustration2.png");
     background-repeat: no-repeat;
     background-size: 20%;
-    background-position: 16px;
+    background-position: 1px;
   }
 
   html body .section_about_me .article_about_me .bg_about_me2 .btn_resume {
@@ -394,7 +401,7 @@
 
   html body .section_about_me .card_container2 .li_card_container_about .tittle h3 {
     height: 32px;
-    width: 337px;
+    width: 326px;
     border-radius: nullpx;
     font-size: 24px;
     font-weight: 600;
@@ -433,11 +440,17 @@
 
   /* section contact form */
 
+  html body .bg_dsk2 {
+    width: 375px;
+    display: flex;
+    justify-content: center;
+  }
+
   .section-contact-form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 755px;
+    height: 768px;
     width: 375px;
     border-radius: 0;
     padding: 0 24px 64px 24px;
@@ -472,7 +485,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 330px;
+    height: 360px;
     width: 327px;
     border-radius: 0;
     padding: 0;
@@ -489,13 +502,13 @@
   .section-contact-form .div_form_container .contact-form .div_field fieldset {
     border: 0;
     padding: 0;
-    height: 48px;
+    height: auto;
     width: 327px;
   }
 
   .section-contact-form .div_form_container .contact-form .div_field fieldset input[type="text"] {
-    height: 48px;
-    width: 327px;
+    height: 44px;
+    width: 320px;
     border: 1px solid #d0d9d4;
     border-radius: 4px;
     font-size: 15px;
@@ -526,8 +539,8 @@
   }
 
   .section-contact-form .div_form_container .contact-form .div_field fieldset input[type="email"] {
-    height: 48px;
-    width: 327px;
+    height: 44px;
+    width: 320px;
     border: 1px solid #d0d9d4;
     border-radius: 4px;
     font-size: 15px;
@@ -549,7 +562,7 @@
 
   .section-contact-form .div_form_container .contact-form .div_field fieldset .txtarea_mob {
     height: 114px;
-    width: 327px;
+    width: 320px;
     border: 1px solid #d0d9d4;
     border-radius: 4px;
     font-size: 15px;
@@ -576,12 +589,10 @@
   }
 
   .section-contact-form .div_form_container .contact-form .divbtn_field {
-    margin-top: 68px;
+    margin-bottom: 20px;
   }
 
   .section-contact-form .div_form_container .contact-form .divbtn_field .btn-form {
-    padding: 12px;
-    margin-top: 12px;
     gap: 10px;
     width: auto;
     height: auto;
@@ -612,12 +623,11 @@
   .email_footer {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 189px;
     width: 375px;
     border-radius: nullpx;
-    margin-bottom: 100px;
-    margin-left: 24px;
+    margin-top: 20px;
   }
 
   .link_email_footer {
@@ -625,12 +635,13 @@
   }
 
   .email_footer .heading_footer {
-    font-size: 20px;
+    font-size: 19px;
     font-weight: 400;
     line-height: 32px;
     letter-spacing: 0;
     text-align: center;
     color: #42526e;
+    width: 375px;
   }
 
   .rounded {
@@ -668,11 +679,12 @@
     font-style: normal;
     font-weight: 600;
     line-height: 16px;
+    overflow-x: hidden;
   }
 
   html body {
     width: 1440px;
-    height: 3846px;
+    height: 3620px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -950,7 +962,7 @@
     background-image: url("images/illustration_about_me_desktop.png");
     background-repeat: no-repeat;
     background-size: contain;
-    width: 1542px;
+    width: 1433px;
     height: 770px;
     display: flex;
     flex-direction: column;
@@ -1116,7 +1128,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: 0 46px;
-    width: 1542px;
+    width: 1433px;
     display: flex;
     flex-direction: column;
     align-items: center;
